2004-03-29  Paul Eggert  <eggert@twinsun.com>

	* modules/getloadvg: Depend on cloexec and xalloc.

2004-03-09  Paul Eggert  <eggert@twinsun.com>

	* modules/getopt: Add lib/getopt_int.h.

2004-01-18  Simon Josefsson  <jas@extundo.com>

	* modules/strdup (Files, Makefile.am): Add strdup.h.

2004-02-22  Bruno Haible  <bruno@clisp.org>

	* modules/xalloc: Remove dependency on stdbool.
	Reported by Derek Robert Price <derek@ximbiot.com>.

2004-02-03  Bruno Haible  <bruno@clisp.org>

	* modules/pipe: New file.
	* MODULES.html.sh (func_all_modules): Add pipe.

2004-01-27  Bruno Haible  <bruno@clisp.org>

	* modules/execute: New file.
	* MODULES.html.sh (func_all_modules): Add execute.

2004-01-23  Paul Eggert  <eggert@twinsun.com>

	* modules/argmatch, modules/obstack, modules/xstrtol:
	Depend on exitfail.

2004-01-20  Bruno Haible  <bruno@clisp.org>

	* modules/setenv: Depend on allocsa instead of alloca.

2004-01-20  Bruno Haible  <bruno@clisp.org>

	* modules/xallocsa: New file.
	* MODULES.html.sh (func_all_modules): Add xallocsa.

2004-01-20  Bruno Haible  <bruno@clisp.org>

	* modules/allocsa: New file.
	* MODULES.html.sh (func_all_modules): Add allocsa.

2004-01-20  Bruno Haible  <bruno@clisp.org>

	* modules/eealloc: New file.
	* MODULES.html.sh (func_all_modules): Add eealloc.

2004-01-15  Paul Eggert  <eggert@twinsun.com>

	* modules/poll: Add BUILT_SOURCES.
	Prefer "$@" to "poll.h" in rule for building poll.h.
	All this is for consistency with alloca and fnmatch.

	* modules/same: Depend on stdbool.

2003-12-03  Bruno Haible  <bruno@clisp.org>

	Upgrade from gettext-0.13.
	* modules/gettext (Files): Add m4/intmax.m4, m4/longdouble.m4,
	m4/longlong.m4, m4/printf-posix.m4, m4/signed.m4, m4/size_max.m4,
	m4/wchar_t.m4, m4/wint_t.m4, m4/xsize.m4.

2003-11-25  Bruno Haible  <bruno@clisp.org>

	* modules/vasnprintf (Files): Remove m4/ssize_t.m4.

2003-11-24  Paul Eggert  <eggert@twinsun.com>

	* modules/alloca: Remove dependency on xalloc.
