@@ -1,5 +1,8 @@
 2004-03-30  Paul Eggert  <eggert@twinsun.com>
 
+	* imaxtostr.c, inttostr.c, inttostr.h, offtostr.c, umaxtostr.c:
+	New files.
+
 	* lib/cloexec.h, lib/cloexec.c (set_cloexec_flag): Return int
 	not bool, to be more consistent with Unix conventions.
 	Suggested by Bruno Haible.
