@@ -1,3 +1,7 @@
+2004-03-30  Paul Eggert  <eggert@twinsun.com>
+
+	* inttostr.m4: New file.
+
 2004-03-29  Paul Eggert  <eggert@twinsun.com>
 
 	* cloexec.m4: New file.
