@@ -1,3 +1,7 @@
+2004-03-30  Paul Eggert  <eggert@twinsun.com>
+
+	* modules/inttostr: New file.
+
 2004-03-29  Paul Eggert  <eggert@twinsun.com>
 
 	* modules/getloadvg: Depend on cloexec and xalloc.
